--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
     <canvas id="carCanvas"></canvas>
+    <script src="sensor.js"></script>
     <script src="utils.js"></script>
     <script src="road.js"></script>
-    <script src="Controls.js"></script>
-    <script src="Car.js"></script>
+    <script src="controls.js"></script>
+    <script src="car.js"></script>
     <script src="index.js"></script>
 </body>
