--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 </head>
 <body>
     <canvas id="carCanvas"></canvas>
+
+    <div id = "verticalButtons">
+        <button onclick="save()">💾</button>
+        <button onclick="discard()">♻</button>
+    </div>
+
     <canvas id="networkCanvas"></canvas>
     <script src="visualizer.js"></script>
     <script src="network.js"></script>
