--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </div>
 
     <canvas id="networkCanvas"></canvas>
+    <script src="math.js"></script>
     <script src="visualizer.js"></script>
     <script src="network.js"></script>
     <script src="sensor.js"></script>
